--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,26 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://monster.rknight.me">Random Monster generator</a>” by Robb Knight</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://willhbr.net/2025/10/20/light-mode-infffffflation">Light mode inFFFFFFlation</a>” by Will Richardson</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.patreon.com/posts/zelda-four-beta-60032999">Zelda Four Swords+ English patch</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://raulnegron.me/2025/wii-news-pr">Modding Wii News Channel to serve Puerto Rican news</a>” by Raúl Negrón</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://insertcredit.com/feature/a-game-developer-without-internet">Iranian game developer without internet</a>” by Arash Hackimi</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2843883">Emojis in Electronic Health Records</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://tim.darcet.fr/shutthefuckup">STFU</a>” by Tim Darcet</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://cryptography.io/en/latest/statements/state-of-openssl">State of OpenSSL for pyca/cryptography</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.goodlookinprint.co">Good Lookin’ Print Company in Minneapolis</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.404media.co/elite-the-palantir-app-ice-uses-to-find-neighborhoods-to-raid">ELITE: the Palantir app ICE uses to raid neighborhoods</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://gist.manganiello.tech/fabio/pkpass2png">Convert PKPASS to PNG</a>” by Fabio</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hecate.pink/blog/2026/trans-flag-emoji">Trans flag emoji 🏳️‍⚧️</a>” by Hecate</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://kevinalbs.com/spherical_snake">Spherical snake</a>” by Kevin Albertson</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://www.phunuonline.com.vn/tu-15-2-quang-cao-video-khong-duoc-ep-nguoi-dung-xem-qua-5-giay-a1571286.html">Vietnam bans unskippable ads</a>”</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://pluralistic.net/2026/01/01/39c3">Post-American internet</a>” by Cory Doctorow</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://unplannedobsolescence.com/blog/prolog-basics-pokemon">Prolog explained with Pokémon</a>” by Alexander Petros</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://grumpy.website">Grumpy website</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://idiallo.com/blog/all-ai-videos-are-harmful">All AI videos are harmful</a>” by Ibrahim Diallo</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://bsky.app/profile/gbbranstetter.bsky.social/post/3mbnenfepzk2q">When people tell you art is not important, that is always the prelude to fascism</a>” by Guillermo del Toro</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.epilogue.co/product/sn-operator">SN Operator</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://blog.glyph.im/2026/01/the-next-thing-will-not-be-big.html">The next thing will not be big</a>” by Glyph</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://henry.codes/writing/a-website-to-destroy-all-websites">A website to end all websites</a>” by Henry Desroches</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hiddenpalace.org/News/One_Bad_Ass_Hedgehog_-_Shadow_the_Hedgehog#Demystifying_DVDs">Demystifying DVDs with Shadow the Hedgehog</a>”</td></tr>
@@ -478,6 +498,9 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="http://ereader.kiczek.com">E-Reader Info and Downloads</a>” by Kiczek</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://alfy.blog/2024/10/19/linking-directly-to-web-page-content.html">Link to web content in URL fragments</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.miilibrary.com">Mii Library</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://youtube.com/watch?v=Bm2Q9HkbLsQ&si=Bf5nkdsTGzVenxkj">the chronically online will become a new underclass</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.youtube.com/watch?v=K9CJY5p0xz4">ICE officer fatally shoots driver in Minneapolis</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.webdesignmuseum.org/exhibitions/video-game-websites-in-the-early-00s">Video Game Websites in the early 00s</a>”</td></tr>
 </table>
 </p>
 {% endblock %}
