--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,14 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.lnh-team.org">DSpico: open source flashcart for Nintendo DS</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://racketmn.com/voices-of-the-occupation-of-mn-ice-trump">Voices of the Minnesota Occupation</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.pokemon-mini.net/games">Pokémon Mini</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.thehandbasket.co/p/ice-st-paul-chongly-scott-thao-saly-hmong-us-citizen-arrest">ICE arresting ChongLy Scott Thao</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.nplusonemag.com/online-only/online-only/ice-vs-everyone">ICE vs. Everyone</a>” by Erin West</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://crimethinc.com/2024/05/27/the-sunbird-how-to-start-an-announcements-only-thread-on-signal-and-how-organizers-in-austin-used-one-to-coordinate-solidarity-with-palestine">How to create an announce-only Signal channel</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://futurism.com/artificial-intelligence/ai-industry-recall-copyright-books">LLMs compress, not learn, their training data</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://techcrunch.com/2025/10/16/amazons-ring-to-partner-with-flock-a-network-of-ai-cameras-used-by-ice-feds-and-police">Amazon Ring partnering with Flock and ICE</a>”</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://monster.rknight.me">Random Monster generator</a>” by Robb Knight</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://willhbr.net/2025/10/20/light-mode-infffffflation">Light mode inFFFFFFlation</a>” by Will Richardson</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.patreon.com/posts/zelda-four-beta-60032999">Zelda Four Swords+ English patch</a>”</td></tr>
