--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,18 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Social Media">📱</td><td>“<a href="https://connectedplaces.online/reports/fr151-tiktok-wont-be-another-twitter">TikTok exodus won't be like Twitter</a>” by Laurens</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://encryptitalready.org">Encrypt it already!</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://github.com/EmulatorJS/EmulatorJS">EmulatorJS: Web frond-end for RetroArch</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://terrygodier.com">Phantom obligation (1)</a>” by Terry Godier</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://nesbitt.io/2026/01/28/the-dependency-layer-in-digital-sovereignty.html">Package repositories and digital sovereignty</a>” by Andrew Nesbitt</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://lmnt.me/blog/sketchbook/lou-lou-dollar.html">Money for your kids</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://toolboyworld.com/eBay/Ryobi_Tools.htm">Ryobi 18V</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://hcs64.com/n64info.html">N64 stuff</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://hugovk.dev/blog/2026/faster-pillow">Tachyon: Python sampling profiler</a>” by Hugo van Kemenade</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://techpolicy.press/how-ice-uses-ai-to-automate-authoritarianism">ICE uses AI to automate authoritarianism</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://vlad.website/how-binary-dependencies-work">How binary dependencies work across programming languages</a>” by Vlad-Stefan Harbuz</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://github.com/kushaldas/replyfast">Replyfast, Signal automation in Python</a>” by Kushal Das</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.lnh-team.org">DSpico: open source flashcart for Nintendo DS</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://racketmn.com/voices-of-the-occupation-of-mn-ice-trump">Voices of the Minnesota Occupation</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.pokemon-mini.net/games">Pokémon Mini</a>”</td></tr>
