New article on e-Reader archiving

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,13 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gbkiss.org">GBKiss</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.classicube.net/download/gamecube">ClassiCube</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://blackskyweb.xyz/money-for-mutual-resilience-introducing-blacksky-cash">Blacksky Cash</a>” by Marisa Rando</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://blog.emojipedia.org/emoji-design-convergence-review-2018-2026">Emoji design convergence review</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://flippermce.github.io">FlipperMCE</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.jeffgeerling.com/blog/2026/ode-to-the-aa-battery">Ode to the AA Battery</a>” by Jeff Geerling</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://internet-in-a-box.org">Internet in a box</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://connectedplaces.online/reports/fr151-tiktok-wont-be-another-twitter">TikTok exodus won't be like Twitter</a>” by Laurens</td></tr>
 <tr><td title="Security">🔒</td><td>“<a href="https://encryptitalready.org">Encrypt it already!</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://github.com/EmulatorJS/EmulatorJS">EmulatorJS: Web frond-end for RetroArch</a>”</td></tr>
@@ -27,7 +34,7 @@
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://hugovk.dev/blog/2026/faster-pillow">Tachyon: Python sampling profiler</a>” by Hugo van Kemenade</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://techpolicy.press/how-ice-uses-ai-to-automate-authoritarianism">ICE uses AI to automate authoritarianism</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://vlad.website/how-binary-dependencies-work">How binary dependencies work across programming languages</a>” by Vlad-Stefan Harbuz</td></tr>
-<tr><td title="Security">🔒</td><td>“<a href="https://github.com/kushaldas/replyfast">Replyfast, Signal automation in Python</a>” by Kushal Das</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://github.com/kushaldas/replyfast">Replyfast: Signal automation in Python</a>” by Kushal Das</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.lnh-team.org">DSpico: open source flashcart for Nintendo DS</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://racketmn.com/voices-of-the-occupation-of-mn-ice-trump">Voices of the Minnesota Occupation</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.pokemon-mini.net/games">Pokémon Mini</a>”</td></tr>
@@ -518,6 +525,7 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="http://ereader.kiczek.com">E-Reader Info and Downloads</a>” by Kiczek</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://alfy.blog/2024/10/19/linking-directly-to-web-page-content.html">Link to web content in URL fragments</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.miilibrary.com">Mii Library</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.youtube.com/shorts/eXbY43ulPZM">Penka Jane // The Folks From Minnesota ("warlike lads"...revised)</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://youtube.com/watch?v=Bm2Q9HkbLsQ&si=Bf5nkdsTGzVenxkj">the chronically online will become a new underclass</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://www.youtube.com/watch?v=K9CJY5p0xz4">ICE officer fatally shoots driver in Minneapolis</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.webdesignmuseum.org/exhibitions/video-game-websites-in-the-early-00s">Video Game Websites in the early 00s</a>”</td></tr>
