--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -16,6 +16,8 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Life">🏞️</td><td>“<a href="https://livingwage.mit.edu">Living wage calculator</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://pandoc.org/app">Pandoc for the people</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gbkiss.org">GBKiss</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.classicube.net/download/gamecube">ClassiCube</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://blackskyweb.xyz/money-for-mutual-resilience-introducing-blacksky-cash">Blacksky Cash</a>” by Marisa Rando</td></tr>
