--- a/app/static/style.css
+++ b/app/static/style.css
@@ -118,6 +118,7 @@ h1 {
   margin: 0;
   margin-top: 1em;
   margin-bottom: 1.5em;
+  line-height: 36px;
 }
 h2, h3, h4, h5, h6 {
   font-size: 1.5rem;
